tests/corpus/negative/N07-import/source.py
import math

def root(value):
    return math.sqrt(value)

